change PUT /users/{userUID} with PUT users/password/{userUID} and  UserController.updateUser with  UserController.updateUserPassword
I think i don't need the password of the user to change his tiktok for example, and for the moment this is impossible, you need to send the password in request to be able to change a link.
